[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mattew"
version = "0.1.0"
description = "Web application surface mapper for security research"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "aiohttp>=3.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
mattew = "mattew.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mattew"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
